Change error management in console.py + height of console zones to make issue tracker link visible

--- a/site/tests/console.css
+++ b/site/tests/console.css
@@ -6,7 +6,7 @@ textarea {
 
 #container {
 width:90%;
-height: 70%;
+height: 60%;
 position:relative;
 margin: auto;
 }
